Actualización de contenido y mejora de textos en el libro

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -19,4 +19,9 @@ language:
     exm: "Ejemplo "
     exr: "Ejercicio "
     proof: "Demostración"
+delete_merged_file: true
 
+rmd_files:
+  - "index.Rmd"
+  - "EDA.Rmd"
+  - "06-references.Rmd"
