Renderizado actualizado del libro

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -24,6 +24,8 @@ delete_merged_file: true
 rmd_files:
   - "index.Rmd"
   - "EDA.Rmd"
+  - "ARIMA.Rmd"
   - "06-references.Rmd"
+
 output_dir: "docs"
 
